# Projeto_1_IA

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  Heuristics.cpp  Heuristics.h  Node.cpp  Node.h  Piece.cpp  Piece.h  Position.cpp  Position.h  README.md  main.cpp  teste.py
display/: board.py  menuDisplay.py
docs/: final_report.pptx
py_display/: __init__.py  board.py  menuDisplay.py  teste.py
